test/libsolidity/syntaxTests/storageLayoutSpecifier/abstract_contract.sol
abstract contract C layout at 42 { }
// ----
// UnimplementedFeatureError 1834: (0-36): Code generation is not supported for contracts with specified storage layout base.
